# raytracing

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh
examples/: practice2_scene.txt  practice3_2_scene.txt  practice3_worst.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/objects/: box.h  ellipsoid.h  intersection.h  light_source.h  object.h  plane.h  ray.h
src/scene/: scene.cpp  scene.h
src/utils/: color.cpp  color.h  common_commands.h  light_commands.h  object_commands.h  parse.cpp  parse.h  random.cpp  random.h  vec.cpp  vec.h
